LPS-153657 Fix modal visibility and modal-full-screen scale

--- a/modules/apps/frontend-css/frontend-css-cadmin-web/src/main/resources/META-INF/resources/clay_admin.scss
+++ b/modules/apps/frontend-css/frontend-css-cadmin-web/src/main/resources/META-INF/resources/clay_admin.scss
@@ -102,6 +102,10 @@ html#{$cadmin-selector} {
 			width: 1em;
 		}
 
+		&.modal-open .modal {
+			display: block;
+		}
+
 		.user-icon-color-0 {
 			color: $user-icon-color-0;
 		}
